--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,9 @@
     <string name="news_toast">已为您推荐了%1$s条新资讯</string>
     <string name="finish">完成</string>
     <string name="edit">编辑</string>
-    <string name="willUrl">416620333</string>
-    <string name="githubUrl">https://github.com/wuyaowei1989</string>
-    <string name="email">wuyaowei@163.com</string>
+    <string name="willUrl">http://will-ls.top/</string>
+    <string name="githubUrl">https://github.com/Will-Ls</string>
+    <string name="email">liwanglin_001@163.com</string>
 
     <string-array name="news_channel">
         <item>头条</item>
